fixed images and video spacing

--- a/css/style.css
+++ b/css/style.css
@@ -293,8 +293,8 @@ body {
     }
 
     .col-lg-8 #wally-sc, #uni-proj-sc {
-        height: 20%;
-        width: 70%;
+        height: 10%;
+        width: 50%;
     }
 
     .container img {
